--- a/Staff/src/main/res/drawable/ic_pole.xml
+++ b/Staff/src/main/res/drawable/ic_pole.xml
@@ -4,19 +4,19 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M226.5,10.5c-2.5,2.4 -2.5,2.4 -2.5,24l0,21.5 -36,-0 -36,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -32,-0 -32,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -13.5,-0c-13.1,-0 -13.7,0.1 -16,2.5l-2.5,2.4 0,27.1 0,27.1 2.5,2.4 2.4,2.5 97.6,-0 97.5,-0 0,48 0,48 -36,-0 -36,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -32,-0 -32,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -1.5,-1.6 -3.6,-2.5 -5.5,-2.5 -1.9,-0 -4,0.9 -5.5,2.5 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -13.5,-0c-13.1,-0 -13.7,0.1 -16,2.5l-2.5,2.4 0,27.1 0,27.1 2.5,2.4 2.4,2.5 51.8,-0 51.8,-0 45.8,45.8 45.7,45.7 0,63.8 0,63.8 2.5,2.4 2.4,2.5 27.1,-0 27.1,-0 2.4,-2.5 2.5,-2.4 0,-63.8 0,-63.8 45.8,-45.8 45.7,-45.7 51.8,-0 51.8,-0 2.4,-2.5 2.5,-2.4 0,-27.1 0,-27.1 -2.5,-2.4c-2.3,-2.4 -2.9,-2.5 -16,-2.5l-13.5,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -32,-0 -32,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -36,-0 -36,-0 0,-48 0,-48 97.5,-0 97.6,-0 2.4,-2.5 2.5,-2.4 0,-27.1 0,-27.1 -2.5,-2.4c-2.3,-2.4 -2.9,-2.5 -16,-2.5l-13.5,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -32,-0 -32,-0 0,-9.5c0,-8.8 -0.2,-9.8 -2.5,-12 -3.2,-3.3 -7.8,-3.3 -11,-0 -2.3,2.2 -2.5,3.2 -2.5,12l0,9.5 -36,-0 -36,-0 0,-21.5c0,-21.6 0,-21.6 -2.5,-24l-2.4,-2.5 -27.1,-0 -27.1,-0 -2.4,2.5zM272,256l0,232 -16,-0 -16,-0 0,-232 0,-232 16,-0 16,-0 0,232zM224,88l0,16 -92,-0 -92,-0 0,-16 0,-16 92,-0 92,-0 0,16zM472,88l0,16 -92,-0 -92,-0 0,-16 0,-16 92,-0 92,-0 0,16zM224,248l0,16 -92,-0 -92,-0 0,-16 0,-16 92,-0 92,-0 0,16zM472,248l0,16 -92,-0 -92,-0 0,-16 0,-16 92,-0 92,-0 0,16zM224,314c0,18.7 -0.1,34 -0.3,34 -0.1,-0 -15.5,-15.3 -34.2,-34l-34,-34 34.3,-0 34.2,-0 0,34zM356,280.3c0,0.1 -15.3,15.5 -34,34.2l-34,34 0,-34.3 0,-34.2 34,-0c18.7,-0 34,0.1 34,0.3z"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M50.5,82.5c-1.6,1.5 -2.5,3.6 -2.5,5.5 0,1.9 0.9,4 2.5,5.5l2.4,2.5 31.1,-0 31.1,-0 2.4,-2.5c3.3,-3.2 3.3,-7.8 0,-11l-2.4,-2.5 -31.1,-0 -31.1,-0 -2.4,2.5z"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M130.5,82.5c-1.6,1.5 -2.5,3.6 -2.5,5.5 0,1.9 0.9,4 2.5,5.5 2.1,2.2 3.3,2.5 9.5,2.5 6.2,-0 7.4,-0.3 9.5,-2.5 1.6,-1.5 2.5,-3.6 2.5,-5.5 0,-1.9 -0.9,-4 -2.5,-5.5 -2.1,-2.2 -3.3,-2.5 -9.5,-2.5 -6.2,-0 -7.4,0.3 -9.5,2.5z"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#000000"
+        android:fillColor="#FFFFFF"
         android:pathData="M394.5,242.5c-1.6,1.5 -2.5,3.6 -2.5,5.5 0,1.9 0.9,4 2.5,5.5l2.4,2.5 31.1,-0 31.1,-0 2.4,-2.5c1.6,-1.5 2.5,-3.6 2.5,-5.5 0,-1.9 -0.9,-4 -2.5,-5.5l-2.4,-2.5 -31.1,-0 -31.1,-0 -2.4,2.5z"
         android:strokeColor="#00000000" />
 </vector>
