--- a/Staff/src/main/res/layout/activity_restart.xml
+++ b/Staff/src/main/res/layout/activity_restart.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="Restart Router Pelanggan"
+            android:text="@string/restart_router"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
