--- a/Staff/src/main/res/layout/activity_login_web_app.xml
+++ b/Staff/src/main/res/layout/activity_login_web_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presensi.ScannerActivity">
+    tools:context=".auth.LoginWebAppActivity">
 
     <LinearLayout
         android:id="@+id/ll_header"
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/presensi"
+            android:text="@string/login_webapp"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
