finish add todolist, problem edit status todolist

--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -316,9 +316,9 @@
         app:menu_animationDelayPerItem="50"
         app:menu_backgroundColor="#80757575"
         app:menu_buttonSpacing="0dp"
-        app:menu_colorNormal="@color/secondaryLightColor"
-        app:menu_colorPressed="@color/secondaryColor"
-        app:menu_colorRipple="@color/secondaryLightColor"
+        app:menu_colorNormal="@color/secondaryColor"
+        app:menu_colorPressed="@color/secondaryDarkColor"
+        app:menu_colorRipple="@color/secondaryColor"
         app:menu_fab_size="normal"
         app:menu_icon="@drawable/ic_scan_qr"
         app:menu_labels_colorNormal="@color/primaryDarkColor"
