--- a/Staff/src/main/res/layout/activity_hal_baik.xml
+++ b/Staff/src/main/res/layout/activity_hal_baik.xml
@@ -73,9 +73,9 @@
         android:layout_margin="12dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add"
-        app:fab_colorNormal="@color/primaryColor"
-        app:fab_colorPressed="@color/primaryDarkColor"
-        app:fab_colorRipple="@color/primaryColor"
+        app:fab_colorNormal="@color/secondaryColor"
+        app:fab_colorPressed="@color/secondaryDarkColor"
+        app:fab_colorRipple="@color/secondaryColor"
         app:fab_label="@string/login_webapp"
         app:fab_size="normal"
         app:layout_constraintBottom_toBottomOf="parent"
