--- a/Staff/src/main/res/layout/item_todo_list.xml
+++ b/Staff/src/main/res/layout/item_todo_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/md_grey_200"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -15,7 +16,7 @@
         android:orientation="horizontal"
         android:padding="12dp">
 
-        <TextView
+        <CheckBox
             android:id="@+id/tv_todo_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,7 +34,7 @@
             android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/md_grey_700"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
