--- a/Staff/src/main/res/layout/item_gangguan.xml
+++ b/Staff/src/main/res/layout/item_gangguan.xml
@@ -66,7 +66,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
         <View
-            android:id="@+id/separator"
+            android:id="@+id/separator1"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginTop="10dp"
@@ -85,7 +85,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator" />
+            app:layout_constraintTop_toBottomOf="@+id/separator1" />
 
         <TextView
             android:id="@+id/tv_status"
@@ -98,7 +98,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/separator"
+            app:layout_constraintTop_toBottomOf="@+id/separator1"
             tools:ignore="HardcodedText" />
 
         <ImageView
@@ -112,7 +112,7 @@
             android:src="@drawable/ic_dot"
             app:layout_constraintBottom_toBottomOf="@+id/tv_status"
             app:layout_constraintEnd_toStartOf="@+id/tv_priority"
-            app:layout_constraintTop_toBottomOf="@+id/separator" />
+            app:layout_constraintTop_toBottomOf="@+id/separator1" />
 
         <TextView
             android:id="@+id/tv_priority"
@@ -124,7 +124,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/separator"
+            app:layout_constraintTop_toBottomOf="@+id/separator1"
             tools:ignore="HardcodedText" />
 
         <TextView
