--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -32,16 +32,17 @@
         app:layout_constraintStart_toEndOf="@+id/img_photo"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--    <ImageView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="end"-->
-    <!--        android:layout_marginEnd="18dp"-->
-    <!--        android:contentDescription="@string/btn_notification"-->
-    <!--        android:src="@drawable/ic_notification"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/ll_body"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
+    <ImageView
+        android:id="@+id/btn_notification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="18dp"
+        android:contentDescription="@string/btn_notification"
+        android:src="@drawable/ic_notification"
+        app:layout_constraintBottom_toTopOf="@+id/ll_body"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/ll_body"
