--- a/Staff/src/main/res/layout/activity_setting.xml
+++ b/Staff/src/main/res/layout/activity_setting.xml
@@ -148,9 +148,9 @@
         android:id="@+id/app_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/app_version"
         android:textColor="@color/md_grey_700"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
