--- a/Staff/src/main/res/layout/activity_logger.xml
+++ b/Staff/src/main/res/layout/activity_logger.xml
@@ -49,15 +49,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="24dp"
-                android:text="Hello World!" />
+                android:text="Hello World!"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
